fixed major merge issue

--- a/forkafest.html
+++ b/forkafest.html
@@ -90,7 +90,7 @@
             </div>
           </div>
           <div class="good-md-6" style="text-align: center; ">
-            <img src="assets/img/forkafest.svg" alt="forkafest" class="image-fluid" style="width: 100%; height: 100%;">
+            <img src="assets/img/forkafest.svg" alt="forkafest" class="image-fluid img-f" style="width: 100%; height: 100%;">
           </div>
         </div>
       </div>
@@ -128,16 +128,8 @@
             komputasi. </p>
         </div>
         <div class="good-md-12 aos" style="text-align: center; margin-top: 75px;">
-          <img src="assets/img/winner.svg" alt="forkafest" class="image-fluid" style="width: 50%; height: 50%;">
+          <img src="assets/img/winner.svg" alt="forkafest" class="image-fluid ">
         </div>
-        <div style="text-align: center; margin-top: 50px;">
-          <button class="cta1 aos">
-            <span>Daftarkan tim anda !</span>
-            <svg viewBox="0 0 13 10" height="10px" width="15px">
-              <path d="M1,5 L11,5"></path>
-              <polyline points="8 1 12 5 8 9"></polyline>
-            </svg>
-          </button>
         </div>
       </div>
     </section>
@@ -164,7 +156,7 @@
       }
     </style>
     <!-- SECTION 3 -->
-    <section style="background-color: #f5f5f5f5;">
+    <section style="background-color: #f8f8f8;">
       <div class="inventory"
         style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="wor aos">
