--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <div class="slider-content">
             <figure class="show">
               <div class="image-c">
-                <img src="assets/img/bgg/unj.jpg" alt="Coffee">
+                <img src="assets/img/bgg/unj.jpg" alt="bg">
               </div>
               <div class="content">
                 <div class="good-md-6"
@@ -200,7 +200,7 @@
         </div>
         <div class="wor">
           <div class="good-md-6 aos" delay="100"
-            style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+            style="display: flex; justify-content: flex-start; align-items: center; flex-direction: column;">
             <img src="assets/img/teknik.png" alt="" style="max-height: 300px; padding: 30px;">
           </div>
           <div class="good-md-6 aos" delay="150"
@@ -251,7 +251,7 @@
         <div class="wor aos">
           <h2 style="color: #fff; padding: 10px;">Kenapa Harus Teknik Informatika Universitas Muhammadiyah Jember?</h2>
         </div>
-        <div class="wor aos">
+        <div class="wor aos" style="justify-content: center;">
           <div class="good-md-3" style="padding: 30px;">
             <!-- card -->
             <div class="card inner">
@@ -579,43 +579,44 @@
         </div>
         <div class="wor-c">
           <div id="gallery">
-            <div><img src="assets/img/gallery/3.JPG" /><a href="#lightbox-1">512</a></div>
-            <div><img src="assets/img/gallery/2.JPG" /><a href="#lightbox-2">513</a></div>
-            <div><img src="assets/img/gallery/1.JPG" /><a href="#lightbox-3">514</a></div>
-            <div><img src="assets/img/gallery/6.JPG" /><a href="#lightbox-4">515</a></div>
-            <div><img src="assets/img/gallery/5.JPG" /><a href="#lightbox-5">516</a></div>
-            <div><img src="assets/img/gallery/4.JPG" /><a href="#lightbox-6">517</a></div>
+            <div><img src="assets/img/gallery/3.JPG" /><a href="#lightbox-1"></a></div>
+            <div><img src="assets/img/gallery/2.JPG" /><a href="#lightbox-2"></a></div>
+            <div><img src="assets/img/gallery/1.JPG" /><a href="#lightbox-3"></a></div>
+            <div><img src="assets/img/gallery/6.JPG" /><a href="#lightbox-4"></a></div>
+            <div><img src="assets/img/gallery/5.JPG" /><a href="#lightbox-5"></a></div>
+            <div><img src="assets/img/gallery/4.JPG" /><a href="#lightbox-6"></a></div>
           </div>
-          <div class="lightbox" id="lightbox-1">
-            <div class="content"><img src="assets/img/gallery/3.JPG" />
-              <div class="title">No. <b>512</b> from Picsum</div><a class="close" href="#gallery"></a>
-            </div>
-          </div>
-          <div class="lightbox" id="lightbox-2">
-            <div class="content"><img src="assets/img/gallery/2.JPG" />
-              <div class="title">No. <b>513</b> from Picsum</div><a class="close" href="#gallery"></a>
-            </div>
-          </div>
-          <div class="lightbox" id="lightbox-3">
-            <div class="content"><img src="assets/img/gallery/1.JPG" />
-              <div class="title">No. <b>514</b> from Picsum</div><a class="close" href="#gallery"></a>
-            </div>
-          </div>
-          <div class="lightbox" id="lightbox-4">
-            <div class="content"><img src="assets/img/gallery/6.JPG" />
-              <div class="title">No. <b>515</b> from Picsum</div><a class="close" href="#gallery"></a>
-            </div>
-          </div>
-          <div class="lightbox" id="lightbox-5">
-            <div class="content"><img src="assets/img/gallery/5.JPG" />
-              <div class="title">No. <b>516</b> from Picsum</div><a class="close" href="#gallery"></a>
-            </div>
-          </div>
-          <div class="lightbox" id="lightbox-6">
-            <div class="content"><img src="assets/img/gallery/4.JPG" />
-              <div class="title">No. <b>517</b> from Picsum</div><a class="close" href="#gallery"></a>
-            </div>
-          </div>
+          
+        </div>
+      </div>
+      <div class="lightbox" id="lightbox-1">
+        <div class="content"><img src="assets/img/gallery/3.JPG" />
+          <div class="title">Event Forkafest</div><a class="close" href="#gallery"></a>
+        </div>
+      </div>
+      <div class="lightbox" id="lightbox-2">
+        <div class="content"><img src="assets/img/gallery/2.JPG" />
+          <div class="title">Event Forkafest</div><a class="close" href="#gallery"></a>
+        </div>
+      </div>
+      <div class="lightbox" id="lightbox-3">
+        <div class="content"><img src="assets/img/gallery/1.JPG" />
+          <div class="title">Event Forkafest</div><a class="close" href="#gallery"></a>
+        </div>
+      </div>
+      <div class="lightbox" id="lightbox-4">
+        <div class="content"><img src="assets/img/gallery/6.JPG" />
+          <div class="title">Event Forkafest</div><a class="close" href="#gallery"></a>
+        </div>
+      </div>
+      <div class="lightbox" id="lightbox-5">
+        <div class="content"><img src="assets/img/gallery/5.JPG" />
+          <div class="title">Event Forkafest</div><a class="close" href="#gallery"></a>
+        </div>
+      </div>
+      <div class="lightbox" id="lightbox-6">
+        <div class="content"><img src="assets/img/gallery/4.JPG" />
+          <div class="title">Event Forkafest</div><a class="close" href="#gallery"></a>
         </div>
       </div>
     </section>
@@ -758,21 +759,7 @@
         transform: translateY(11em) translateX(6em);
       }
     </style>
-    <section class="isometri2" style="background-color: #f8f8f8;">
-      <style>
-        .isometri2 {
-          background-image: url(assets/img/bg/iiisometric2.svg);
-          background-size: auto;
-          background-position: center;
-          background-repeat: no-repeat;
-        }
-
-        @media screen and (max-width: 768px) {
-          .isometri2 {
-            background-image: none;
-          }
-        }
-      </style>
+    <section  class="r-bg" style="background-color: #f8f8f8; background-repeat: repeat-x;">
       <div class="inventory"
         style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="wor">
@@ -838,7 +825,7 @@
 
         <div class="alamat icon">
           <i class="fas fa-map-marker-alt"></i>
-          <p>Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
+          <p>Jl. Karimata No. Jawa Timur - Indonesia</p>
         </div>
         <!-- email -->
         <div class="email icon">
