done ga bang? done

--- a/bahasa.html
+++ b/bahasa.html
@@ -71,7 +71,7 @@
   <!-- SECTION 3 -->
   <section style="background-color: #f394ba; width: 100%; min-height: 610px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff4a3" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
-    <div class="inventory">
+    <div class="inventory" style="padding-bottom: 50px;">
       <div class="wor">
         <div class="good-md-6">
           <h1 class="nama-bahasa">CSS</h1><br>
@@ -101,7 +101,7 @@
   <!-- SECTION 4 -->
   <section style="background-color: #B5DAFF; width: 100%; min-height: 610px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f394ba" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
-    <div class="inventory">
+    <div class="inventory" style="padding-bottom: 50px;">
       <div class="wor">
         <div class="good-md-6">
           <h1 class="nama-bahasa">JavaScript</h1><br>
@@ -129,7 +129,7 @@
   <!-- SECTION 5 -->
   <section style="background-color: #d4fea3; width: 100%; min-height: 610px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#B5DAFF" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
-    <div class="inventory">
+    <div class="inventory" style="padding-bottom: 50px;">
       <div class="wor">
         <div class="good-md-6">
           <h1 class="nama-bahasa">Python</h1><br>
@@ -154,7 +154,7 @@
   <!-- SECTION 6 -->
   <section style="background-color: #d49696; width: 100%; min-height: 610px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#d4fea3" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
-    <div class="inventory">
+    <div class="inventory" style="padding-bottom: 50px;">
       <div class="wor">
         <div class="good-md-6">
           <h1 class="nama-bahasa">PHP</h1><br>
@@ -180,7 +180,7 @@
   <!-- SECTION 7 -->
   <section style="background-color: #a1a1a1; width: 100%; min-height: 610px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#d49696" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
-    <div class="inventory">
+    <div class="inventory" style="padding-bottom: 50px;">
       <div class="wor">
         <div class="good-md-12">
           <h1 class="learn">Quizzes</h1>
