--- a/forkafest.html
+++ b/forkafest.html
@@ -81,7 +81,7 @@
               era society 5.0"</p>
             <div style="text-align: center; margin-top: 50px;">
               <button class="cta">
-                <span>Daftarkan tim anda !</span>
+                <span><a href="#rangkaian" style="text-decoration: none; color: #000;">Daftarkan tim anda !</a></span>
                 <svg viewBox="0 0 13 10" height="10px" width="15px">
                   <path d="M1,5 L11,5"></path>
                   <polyline points="8 1 12 5 8 9"></polyline>
@@ -156,7 +156,7 @@
       }
     </style>
     <!-- SECTION 3 -->
-    <section style="background-color: #f8f8f8;">
+    <section style="background-color: #f8f8f8;" id="rangkaian">
       <div class="inventory"
         style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="wor aos">
@@ -240,6 +240,7 @@
           <p class="desc" style="padding: 20px 0;">HUMANIKA Unmuh Jember PROUDLY PRESENT FORKAFEST 3.0 PUBG MOBILE. Hai
             Gamers, Yuk ikut lomba PUBG Mobile
             dalam mengembangkan bakat dan minat para pemain PUBG. Tema : "The Dreams of Teamwork"</p>
+            <button class="close-modal" id=""><a href="https://bit.ly/FORKAFEST_PUBG_MOBILE" style="text-decoration: none; color: #fff;">Link Pendaftaran</a></button>
           <button class="close-modal" id="close1">Close</button>
         </div>
       </div>
@@ -252,6 +253,7 @@
           <p class="desc" style="padding: 20px 0;">HUMANIKA Unmuh Jember PROUDLY PRESENT FORKAFEST 3.0 Mobile Legend. Hai
             Gamers, Yuk ikut lomba Mobile
             Legend dalam mengembangkan bakat dan minat para pemain ML. Tema : "Moment of Win"</p>
+            <button class="close-modal" id=""><a href="https://bit.ly/FORKAFEST_MOBILE_LEGENDS" style="text-decoration: none; color: #fff;">Link Pendaftaran</a></button>
           <button class="close-modal" id="close2">Close</button>
         </div>
       </div>
@@ -266,6 +268,7 @@
             dalam mengapresiasi karya pelajar dan mahasiswa untuk mewujudkan mimpi.
             Tema : "Meningkatkan kreativitas generasi muda dengan teknologi digital dalam menghadapi era society 5.0"
           </p>
+          <button class="close-modal" id=""><a href="https://bit.ly/FORKAFEST_UIUX_DESIGN" style="text-decoration: none; color: #fff;">Link Pendaftaran</a></button>
           <button class="close-modal" id="close3">Close</button>
         </div>
       </div>
@@ -280,6 +283,7 @@
             sebagai ajang untuk meningkatkan pengalaman di bidang KEAMANAN INFORMASI.
             Tema : "Bersatu Membangun Peradaban Digital Yang Cerdas, Beradab, dan Berbudaya"
           </p>
+          <button class="close-modal" id=""><a href="https://bit.ly/FORKAFEST_CYBER_SECURITY" style="text-decoration: none; color: #fff;">Link Pendaftaran</a></button>
           <button class="close-modal" id="close4">Close</button>
         </div>
       </div>
@@ -294,6 +298,7 @@
             sebagai ajang untuk meningkatkan pengalaman di bidang Website Development.
             Tema : "To Get Better in Developing"
           </p>
+          <button class="close-modal" id=""><a href="https://bit.ly/FORKAFEST_WEB_DEVELOPMENT" style="text-decoration: none; color: #fff;">Link Pendaftaran</a></button>
           <button class="close-modal" id="close5">Close</button>
         </div>
       </div>
@@ -307,6 +312,7 @@
             Whats up guys, Yuk ikut lomba Computer Network
             sebagai ajang untuk meningkatkan pengalaman di bidang Networking.
             Tema : "Explore the World With Internet"</p>
+            <button class="close-modal" id=""><a href="https://bit.ly/FORKAFEST_COMPUTER_NETWORK" style="text-decoration: none; color: #fff;">Link Pendaftaran</a></button>
           <button class="close-modal" id="close6">Close</button>
         </div>
       </div>
