--- a/quiz.html
+++ b/quiz.html
@@ -30,18 +30,18 @@
   <main class="mainmain">
     <div class="score-modal-container" id="score-modal">
       <div class="score-content-container">
-        <h1>Congratulation, Quiz Completed !</h1>
+        <h1>Selamat, Quiz Selesai !</h1>
 
         <div class="grade-detail">
-          <p>Attempts : 10</p>
-          <p>Right Answers : <span id="right-answers"></span></p>
-          <p>Wrong Answers : <span id="wrong-answers"></span></p>
-          <p>Grade : <span id="grade-percentage"></span></p>
+          <p>Soal : 10</p>
+          <p>Jawaban Benar : <span id="right-answers"></span></p>
+          <p>Jawaban Salah : <span id="wrong-answers"></span></p>
+          <p>Nilai : <span id="grade-percentage"></span></p>
           <p><span id="remarks"></span></p>
         </div>
 
         <div class="next-button-container">
-          <button onclick="closeScoreModal()">Continue</button>
+          <button onclick="closeScoreModal()">Selanjutnya</button>
         </div>
 
       </div>
@@ -50,8 +50,8 @@
     <div class="game-quiz-container">
 
       <div class="game-details-container">
-        <h1>Score : <span id="player-score"> /10</span></h1>
-        <h1>Question : <span id="question-number"> /10</span></h1>
+        <h1>Skor : <span id="player-score"> /10</span></h1>
+        <h1>Pertanyaan : <span id="question-number"> /10</span></h1>
       </div>
 
       <div class="game-question-container">
@@ -63,10 +63,10 @@
         <div class="score-modal-container" id="option-modal">
 
           <div class="modal-content-container">
-            <h1>Please Pick An Option</h1>
+            <h1>Mohon Pilih Salah Satu Jawaban !</h1>
 
             <div class="modal-button-container">
-              <button onclick="closeOptionModal()">Continue</button>
+              <button onclick="closeOptionModal()">Baiklah</button>
             </div>
 
           </div>
@@ -76,7 +76,7 @@
         <style>
           /* make radio bg is different when checked */
           .spanspan {
-            background-color: gray;
+            background-color: darkgray;
           }
           .radioquiz:checked+.optionquiz {
             background-color: #2da6ff;
@@ -105,7 +105,7 @@
       </div>
 
       <div class="next-button-container">
-        <button onclick="handleNextQuestion()">Next Question</button>
+        <button onclick="handleNextQuestion()">Pertanyaan Berikutnya</button>
       </div>
     </div>
   </main>
