--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
         <div class="wor-c">
           <div id="gallery">
             <div><img src="assets/img/gallery/3.JPG" /><a href="#lightbox-1"></a></div>
-            <div><img src="assets/img/gallery/2.JPG" /><a href="#lightbox-2"></a></div>
+            <div><img src="assets/img/gallery/2.jpg" /><a href="#lightbox-2"></a></div>
             <div><img src="assets/img/gallery/1.JPG" /><a href="#lightbox-3"></a></div>
             <div><img src="assets/img/gallery/6.JPG" /><a href="#lightbox-4"></a></div>
             <div><img src="assets/img/gallery/5.JPG" /><a href="#lightbox-5"></a></div>
@@ -595,7 +595,7 @@
         </div>
       </div>
       <div class="lightbox" id="lightbox-2">
-        <div class="content"><img src="assets/img/gallery/2.JPG" />
+        <div class="content"><img src="assets/img/gallery/2.jpg" />
           <div class="title">Event Forkafest</div><a class="close" href="#gallery"></a>
         </div>
       </div>
